--- a/awards.qmd
+++ b/awards.qmd
@@ -66,7 +66,7 @@ honors |>
   mutate(
     link = paste0("[", title, "](https://scholarworks.smith.edu/theses/", id, ")" )
   ) |>
-  select(year, student, designation, link, first_reader, second_reader) |>
+  select(year, student, designation, Title = link, first_reader, second_reader) |>
   janitor::clean_names(case = "title") |>
   knitr::kable()
 ```
