--- a/index.qmd
+++ b/index.qmd
@@ -10,12 +10,12 @@ This website is managed by the SDS faculty. For our official website, please vis
 
 ## Who we are
 
-- Top row: Scott LaCombe, Albert Y. Kim, Benjamin Baumer, Randi Garcia
-- Middle row: Arris Moise (SDS Coalition of Color student rep), Lindsay Poirier, William Hopper, Marium Tapal (Smithies in SDS student rep)
-- Bottom row: Fatou Sanogo, Katherine M. Kinnaird 
-- Not pictured: Katherine Halvorsen
+- Top row: Katherine M. Kinnaird, William Hopper, Casey Berger, Nic Schwab
+- Middle row: Rebecca Kurtz-Garcia, Randi Garcia, Lindsay Poirier
+- Bottom row: Shiya Cao, Scott LaCombe, Kaitlyn Cook, Albert Kim, Hualong Xu (student representative)
+- Not pictured: Ben Baumer, Kelley Dunphy (administrative coordinator), Ab Mosca, Yujie Wang, Kementari Whitcher
 
 ```{r, echo = FALSE}
-knitr::include_graphics("gfx/2021-2022_faculty.png")
+knitr::include_graphics("gfx/sds-2024.jpg")
 ```
 
