--- a/awards.qmd
+++ b/awards.qmd
@@ -11,6 +11,7 @@ The faculty meets every spring to review the research projects they have supervi
 
 #### Awardees
 
+- 2025: Elm Markert '25
 - 2024: Heng (Silvia) Song '24
 - 2023: Quinn White '23
 - 2022: Natalia Iannucci '22
@@ -31,6 +32,7 @@ The [Five College Statistics](https://www.fivecolleges.edu/statistics/) prize is
 
 #### Awardees
 
+- 2025: Sarah Susnea '25 *(outstanding independent research, thesis, or capstone course project in statistics)*
 - 2024: Christy Yang '25J and Vicky Xu '26 *(outstanding service to statistics)*
 - 2023: Aushanae Haller '23J, Clara Li '23 *(outstanding service to statistics)*
 - 2022: Sarah Gillespie '22J, Joyce Huang '22, Arris Moise '22, Chichi Wu '22 *(outstanding service to statistics)*
