--- a/awards.qmd
+++ b/awards.qmd
@@ -53,9 +53,9 @@ The [Five College Statistics](https://www.fivecolleges.edu/statistics/) prize is
 library(tidyverse)
 honors <- tribble(
   ~year, ~student, ~designation, ~title, ~id, ~first_reader, ~second_reader,
-  2025, "Elm Markert '25", "", "", NA, "Kaitlyn Cook", "",
-  2025, "Tillie Slosser '25", "", "", NA, "Scott LaCombe", "",
-  2025, "Skyler Williams '25", "(MST)", "", NA, "Kaitlyn Cook", "Rebecca Kurtz-Garcia",
+  2025, "Elm Markert '25", "Highest Honors", "Towards a 16S rRNA Sequence Analysis Pipeline: Exploring Statistical Methods for Taxonomic Assignment", NA, "Kaitlyn Cook", "Luce Ward",
+  2025, "Tillie Slosser '25", "Highest Honors", "Spatiotemporal Interpolation of Wildfire Smoke-Derived PM2.5 using Deep Neural Networks", NA, "Scott LaCombe", "",
+  2025, "Skyler Williams '25", "Highest Honors (MST)", "Analysis of Analytical Treatment Interruption Trials with Misclassified Interval-Censored Data", NA, "Kaitlyn Cook", "Rebecca Kurtz-Garcia",
   2024, "Heng (Silvia) Song '24", "High Honors (MST)", "Stochastic Processes and their Application in Bayesian Statistics", NA, "Kaitlyn Cook", "Jen Beichman (MTH)",
   2023, "Quinn White '23", "Highest Honors", "Using Sensitivity Analyses to Approximate Total COVID-19 Infections: State and County level in the United States, March 2021--March 2022", NA, "Ben Baumer", "Nick Reich (UMass)",
   2022, "Natalia Iannucci '22", "Highest Honors", "Improving Mutational Signature Detection in Cancer through Frequentist and Bayesian Hypothesis Testing", 2446, "Ben Baumer", "Giovanni Parmigiani (Harvard)",
@@ -87,14 +87,15 @@ DataFest is a national undergraduate data analysis competition hosted at UMass e
 
 Recent winners from Smith include:
 
+- [2025](https://www.science.smith.edu/datafest/2025/04/08/recap-of-the-2025-asa-five-college-datafest/)
+    - Best in Group (Panel B): Data Wranglers  
+      Itzel Aleman Flores '27, Danielle Justo '27, Zoe Khan '27
 - [2023](https://www.science.smith.edu/datafest/2023/04/10/recap-from-the-2023-asa-five-college-datafest/)
     - Best in Show: The Model Mavericks   
       Clara Li '23, Nikki Lin, Rose Porta '23, Quinn White '23, and Kushagra Srivastava (UMass)
     - Best in Group (Panel B): Sexy Data Scientists   
       Sarah Branch, Yaretsy Castro, Camila Maldonado, Su Than Thar Nyi, and Sonia Paredes
-
-
-- <a href="http://www.science.smith.edu/datafest/2019/04/03/winners-from-five-college-asa-datafest-2019/">2019</a>
+- [2019](http://www.science.smith.edu/datafest/2019/04/03/winners-from-five-college-asa-datafest-2019/)
     - Best in Show: A-super-NOVA   
     	Audrey Bertin '21, Arielle Dror '20, Clara Rosenberg '20, Kara VanAllen '20
     - Best in Group (Panel B): Data Pirates   
@@ -107,20 +108,20 @@ Recent winners from Smith include:
     	Victoria Zheng, Sunni Raleigh, Kelly Pien, Catherine Kung
     - Best Data Insight: Unofficial Intelligence  
     	Yanwan Zhu, Xian (Elaine) Ye, Rachel Yan, Kelly Shen '21, Yifan Ma '20, Nichole Yao
-- <a href="http://www.science.smith.edu/datafest/2018/03/27/winners-from-asa-five-college-datafest-2018/">2018</a>
+- [2018](http://www.science.smith.edu/datafest/2018/03/27/winners-from-asa-five-college-datafest-2018/)
     - Best in Group (Panel B): A-super-NOVA   
     	Audrey Bertin '21, Riley Boeth '18, Emma Livingston '20, Clara Rosenberg '20, Kara VanAllen '20
--	<a href="http://www.science.smith.edu/datafest/2017/04/02/recap-of-winners-from-datafest-2017/">2017</a>
+-	[2017](http://www.science.smith.edu/datafest/2017/04/02/recap-of-winners-from-datafest-2017/)
     - Best in Show: DataBest   
     	Zainab Aqdas Rizvi '18, Subashini Sridhar '18J, Ji Young Yun '18, Ji Wong Chung '18 and Van Nguyen '18
     - Best Statistical Interpretation: Normally Distributed   
     	Zixian Li '19, Angie Dinh '17, Abby Doctor '17, Erina Fukuda '18 and Raeesa Alam '19J
     - Best Business Insight: Standard Divination   
     	Isabella Zhu '20, Cas Sweeney '19, Sarah Abowitz '20 and Garcia Sun '20
--	<a href="http://www.science.smith.edu/datafest/2015/03/30/datafest-2015-recap/">2015</a>
+-	[2015](http://www.science.smith.edu/datafest/2015/03/30/datafest-2015-recap/)
     - Best in Show: 2&beta;||!2&beta; <br>
     	Galen Long '15, Sara Stoudt '15, Zhenzhen Tan '15, Aiyi Zhang '15, Weijia (Vega) Zhang '18
--	<a href="http://www.science.smith.edu/datafest/2014/03/31/congratulations-to-all-participants/">2014</a>
+-	[2014](http://www.science.smith.edu/datafest/2014/03/31/congratulations-to-all-participants/)
     - Best in Show: P-Valuables<br>
   	  Deirdre Fitzpatrick '14, Michele Handy '15, Maja Milosavljevic '14, Sara Stoudt '15, and Dana Udwin '14
 
