added Smith JSM get together; close #18

--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -163,6 +163,13 @@ Don't miss these events featuring Smithies and current faculty!
 - [Navigating Challenges and Leveraging Opportunities in Biostatistics Graduate Education](https://ww3.aievolution.com/JSMAnnual2025/Events/viewEv?ev=1694)  
   Elizabeth Stuart '97 (panelist)
 
+Join us for the **Smith JSM get together**:
+
+[Miranda Lambert's Casa Rosa](https://casarosanashville.com/our-menu/)  
+308 Broadway  
+Nashville, TN 37201  
+Monday, August 4th  
+7 - 8:30 pm
 
 We hope to see you there!
 
