--- a/awards.qmd
+++ b/awards.qmd
@@ -6,7 +6,7 @@ title: 'Honors & Prizes'
 
 ### Statistical & Data Sciences Research Prize
 
-The program awards an annual prize to a student majoring in SDS who performed outstanding research during her time at Smith. 
+The program awards an annual prize to a student majoring in SDS or MST who performed outstanding research during their time at Smith. 
 The faculty meets every spring to review the research projects they have supervised and select the prize recipient, who is then notified at the annual Awards Ceremony the day before [Commencement](https://www.smith.edu/news-events/events/commencement).
 
 #### Awardees
