added second reader

--- a/awards.qmd
+++ b/awards.qmd
@@ -54,7 +54,7 @@ library(tidyverse)
 honors <- tribble(
   ~year, ~student, ~designation, ~title, ~id, ~first_reader, ~second_reader,
   2025, "Elm Markert '25", "Highest Honors", "Towards a 16S rRNA Sequence Analysis Pipeline: Exploring Statistical Methods for Taxonomic Assignment", NA, "Kaitlyn Cook", "Luce Ward",
-  2025, "Tillie Slosser '25", "Highest Honors", "Spatiotemporal Interpolation of Wildfire Smoke-Derived PM2.5 using Deep Neural Networks", NA, "Scott LaCombe", "",
+  2025, "Tillie Slosser '25", "Highest Honors", "Spatiotemporal Interpolation of Wildfire Smoke-Derived PM2.5 using Deep Neural Networks", NA, "Scott LaCombe", "Andrew Berke",
   2025, "Skyler Williams '25", "Highest Honors (MST)", "Analysis of Analytical Treatment Interruption Trials with Misclassified Interval-Censored Data", NA, "Kaitlyn Cook", "Rebecca Kurtz-Garcia",
   2024, "Heng (Silvia) Song '24", "High Honors (MST)", "Stochastic Processes and their Application in Bayesian Statistics", NA, "Kaitlyn Cook", "Jen Beichman (MTH)",
   2023, "Quinn White '23", "Highest Honors", "Using Sensitivity Analyses to Approximate Total COVID-19 Infections: State and County level in the United States, March 2021--March 2022", NA, "Ben Baumer", "Nick Reich (UMass)",
