--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -54,28 +54,15 @@ This summer I'm putting together a course on sports analytics (SDS 355) for the 
 
 Outside of work, I'm coaching my daughters' basketball and softball teams, and we got a dog (a miniature schnauzer-terrier mix) who likes to bark at other dogs. 
 
-#### Shiya Cao
+#### [Shiya Cao](https://scao53.github.io/)
 
-My second year at Smith is in the books. I continued to work with students in my [Disability Inclusion Analytics Lab (DIAL)](https://scao53.github.io/). I took two Smithies **Christy Yang ’25J** and **Vicky Xu ’26** to attend the *Women in Statistics and Data Science (WSDS) Conference* in Bellevue, WA in Fall 2023. I am proud of our accomplishments so far:
+Year 3’s reappointment dossier preparation and review process helped me engage in systematic and in-depth reflection on my research and teaching practices. I am committed to continuing the three research areas I have developed since I joined Smith: (1) disability inclusion research using quantitative methodology; (2) accessible design; and (3) integrating disability inclusion components into data science pedagogy. I am also dedicated to providing effective strategies to help students succeed in data science courses and implementing inclusive pedagogy.
 
-Note: Student collaborators are <u>underlined</u>.
+This year, I moved the projects in the three research areas forward. I currently have two journal papers out for review examining employment and healthcare issues respectively through quantitative intersectional analyses of population survey data. In March 2025, I was honored to be invited by my collaborator Keegan Kang at Bucknell University to attend their Distinguished Visting Professor program for a week. During the visit, we continued working on an applied study using random projection algorithms in the differential privacy context. I also gave a talk on Conducting Statistics and Data Science Research in the Disability Inclusion Field and built connections with faculty members in the Mathematics & Statistics Department. Further, my collaboration with Heather Rosenfeld from the Smith College Spatial Analysis Lab resulted in the Campus Accessibility Map [version 1.0](https://experience.arcgis.com/experience/2de16261292f4581be25daee49958bf5). A first-authored journal article derived from this project is under review. Additionally, my article on Data Visualizations for Blind and Visually Impaired Students (condensed version) was invited by ASA Justice, Equity, Diversity, and Inclusion (JEDI) Outreach Group and [published](https://magazine.amstat.org/blog/2024/10/01/data-visualizations-accessible/) at *Amstat News JEDI Corner*. I will present the preliminary results of my pedagogical project at USCOTS this summer. Furthermore, I engaged five Smithies **Sarah Susnea ‘25**, **Mehreen Merza ‘25**, **Lucia Qin ‘26**, **Kayla Tillmon ‘27**, and **Rae Traver-Fallick ’27** in a couple of research projects this year. 
 
-(1) Cao, S., <u>Yang, C. ’25J</u>, and <u>Xu, V. ’26</u>. (2023). “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” *Women in Statistics and Data Science (WSDS) Conference*, Bellevue, WA.
+I taught two sections of *SDS 192: Introduction to Data Science* in Fall 2024, had a Picker course release in Spring 2025 and taught *SDS 100: Reproducible Scientific Computing with Data*. I will be on sabbatical in Fall 2025 and will be looking forward to coming back in Spring 2026 to reflect on students’ feedback and the challenges and opportunities of AI in higher education, and “restart” to support students’ learning more effectively.
 
-(2) <u>Lin, J. Q. ’25J</u>, <u>Liu, K. ’24</u>, Cao, S., <u>Liu, Z. ’25</u>, and <u>Pham, L. ’25</u>. “Examining the Intersection of Disability, Race, Gender, and Age in Shaping the Employment Outcomes of Higher Educated Individuals,” under review at *Journal of Disability Policy Studies*. 
-
-(3) Cao, S., <u>Yang, C. ’25J</u>, and <u>Markert, E. ’25</u>. (2024). “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” *Smith College Celebrating Collaborations Event*, Northampton, MA.
-
-(4) Cao, S., <u>Yang, C. ’25J</u>, <u>Markert, E. ’25</u>, and <u>Xu, V. ’26</u>. “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” under review at *Statistics and Public Policy*.
-
-In addition, I built new collaborations with other scholars this year. I have been working with Heather Rosenfeld from the Spatial Analysis Lab (SAL) at Smith on a research project named Mapping for Access on the Smith College Campus: A Participatory Mapping Approach. I have also been collaborating with Keegan Kang, Assistant Professor of Mathematics at Bucknell University, on a research project named Model Interpretation after Using Random Projections: An Applied Study on Travel Disability Data. 
-
-Moreover, I am working on publishing my doctoral dissertation, examining information systems-enabled workplace inclusion for disabled employees. One of my dissertation papers is [published](https://content.iospress.com/articles/work/wor220716) at the peer-reviewed journal *Work: A Journal of Prevention, Assessment & Rehabilitation*. I also gave a Sigma Xi talk at Smith in Fall 2023 and another talk for a Statistics II course at Bucknell University in Spring 2024. 
-
-This year, I continued to teach SDS 192: Introduction to Data Science. In Fall 2023, I developed and taught a research seminar course SDS 300: Disability Inclusion and Data Analytics. In Spring 2024, I taught the senior capstone course SDS 410 and participated in the pedagogical partnerships program with my student pedagogical partner **My My Tran ’24**. I had great experiences teaching these courses. 
-
-When I had free time, I enjoyed reading books with my book club, practicing piano, seeing movies at Amherst Cinema, and visiting museums. Also, thank you to my colleague Kaitlyn Cook for recommending me the classic American reality TV show “Survivor”! I began to watch Season 1 last summer and am currently at Season 24 (only skipped Seasons 5, 21, and 23), which is a nice way to decompress:)
-
+Outside of work, a new thing I have been participating in this summer is [a series of Thursday evening hiking events in Western Massachusetts](https://www.ventureoutproject.com/queer-day-hikes-events).
 
 #### Kaitlyn Cook
 
