--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -58,7 +58,7 @@ Outside of work, I'm coaching my daughters' basketball and softball teams, and w
 
 Year 3’s reappointment dossier preparation and review process helped me engage in systematic and in-depth reflection on my research and teaching practices. I am committed to continuing the three research areas I have developed since I joined Smith: (1) disability inclusion research using quantitative methodology; (2) accessible design; and (3) integrating disability inclusion components into data science pedagogy. I am also dedicated to providing effective strategies to help students succeed in data science courses and implementing inclusive pedagogy.
 
-This year, I moved the projects in the three research areas forward. I currently have two journal papers out for review examining employment and healthcare issues respectively through quantitative intersectional analyses of population survey data. In March 2025, I was honored to be invited by my collaborator Keegan Kang at Bucknell University to attend their Distinguished Visting Professor program for a week. During the visit, we continued working on an applied study using random projection algorithms in the differential privacy context. I also gave a talk on Conducting Statistics and Data Science Research in the Disability Inclusion Field and built connections with faculty members in the Mathematics & Statistics Department. Further, my collaboration with Heather Rosenfeld from the Smith College Spatial Analysis Lab resulted in the Campus Accessibility Map [version 1.0](https://experience.arcgis.com/experience/2de16261292f4581be25daee49958bf5). A first-authored journal article derived from this project is under review. Additionally, my article on Data Visualizations for Blind and Visually Impaired Students (condensed version) was invited by ASA Justice, Equity, Diversity, and Inclusion (JEDI) Outreach Group and [published](https://magazine.amstat.org/blog/2024/10/01/data-visualizations-accessible/) at *Amstat News JEDI Corner*. I will present the preliminary results of my pedagogical project at USCOTS this summer. Furthermore, I engaged five Smithies **Sarah Susnea ‘25**, **Mehreen Merza ‘25**, **Lucia Qin ‘26**, **Kayla Tillmon ‘27**, and **Rae Traver-Fallick ’27** in a couple of research projects this year. 
+This year, I moved projects in the three research areas forward. I currently have two journal papers out for review examining employment and healthcare issues respectively through quantitative intersectional analyses of population survey data. In March 2025, I was honored to be invited by my collaborator Keegan Kang at Bucknell University to attend their Distinguished Visting Professor program for a week. During the visit, we continued working on an applied study using random projection algorithms in the differential privacy context. I also gave a talk on Conducting Statistics and Data Science Research in the Disability Inclusion Field and built connections with faculty members in the Mathematics & Statistics Department. Further, my collaboration with Heather Rosenfeld from the Smith College Spatial Analysis Lab resulted in the Campus Accessibility Map [version 1.0](https://experience.arcgis.com/experience/2de16261292f4581be25daee49958bf5). A first-authored journal article derived from this project is under review. Additionally, my article on Data Visualizations for Blind and Visually Impaired Students (condensed version) was invited by ASA Justice, Equity, Diversity, and Inclusion (JEDI) Outreach Group and [published](https://magazine.amstat.org/blog/2024/10/01/data-visualizations-accessible/) at *Amstat News JEDI Corner*. I will present the preliminary results of my pedagogical project at USCOTS this summer. Furthermore, I engaged five Smithies **Sarah Susnea ‘25**, **Mehreen Merza ‘25**, **Lucia Qin ‘26**, **Kayla Tillmon ‘27**, and **Rae Traver-Fallick ’27** in a couple of research projects this year. 
 
 I taught two sections of *SDS 192: Introduction to Data Science* in Fall 2024, had a Picker course release in Spring 2025 and taught *SDS 100: Reproducible Scientific Computing with Data*. I will be on sabbatical in Fall 2025 and will be looking forward to coming back in Spring 2026 to reflect on students’ feedback and the challenges and opportunities of AI in higher education, and “restart” to support students’ learning more effectively.
 
